Add HTML and CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section class="card">
+        <div class="main-card">
+            <h2 class="card__title">Enter Your Text or URL</h2>
+            <input type="text" placeholder="Text or URL">
+            <img src="" alt="QR">
+            <button class="card__btn">Generate QR Code</button>
+        </div>
+    </section>
     <script src="./app.js"></script>
 </body>
 </html>
