Add JavaScript logic and improve Css & Structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div class="main-card">
             <h2 class="card__title">Enter Your Text or URL</h2>
             <input type="text" placeholder="Text or URL">
-            <img src="" alt="QR">
+            <p class="modal">" Enter a Valid Text or URL "</p>
+            <div class="card__image"><img src="" alt="QR"></div>
             <button class="card__btn">Generate QR Code</button>
         </div>
     </section>
